--- a/main.css
+++ b/main.css
@@ -16,21 +16,24 @@ h1{
 	padding-left: 5px;
 }
 #main {
-	width: 600px;
+	width: 800px;
 	margin: 0 auto;
 	position: relative;
 	height: 100%;
 	font-family: Helvetica;
 	font-size: 16px;
-	color: #252525;
+	color: #333;
 }
-
-input#number{
+input:focus {
+	outline: none;
+	
+}
+input#item{
 	width: 35%;
 	height: 20px;
 }
-input#item{
-	width: 55%;
+input#number{
+	width: 40%;
 	height: 20px;
 }
 
@@ -45,15 +48,23 @@ form {
 }
 
 table {
-	width: 470px;
+	width: 400px;
 	text-align: left;
 }
 input[type=text] {
 	border: none;
+	border-bottom: 1px solid #919191;
 	font-size: 16px;
+
+	-webkit-border-top-left-radius: 4px;
+	-webkit-border-top-right-radius: 4px;
+	-moz-border-radius-topleft: 4px;
+	-moz-border-radius-topright: 4px;
+	border-top-left-radius: 4px;
+	border-top-right-radius: 4px; 
 }
 tr td:first-child{
-	width: 38%;
+	width: 46%;
 }
 tr td:last-child{
 	width: 20px;
